# tree-sitter-cel

./: Cargo.toml  LICENSE  binding.gyp  go.mod  package.json  pyproject.toml  require-non-root-containers.cel  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cel/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
